fix phonegap build

--- a/src/global.scss
+++ b/src/global.scss
@@ -1,36 +1,41 @@
 // http://ionicframework.com/docs/theming/
-@import '~@ionic/angular/css/core.css';
-@import '~@ionic/angular/css/normalize.css';
-@import '~@ionic/angular/css/structure.css';
-@import '~@ionic/angular/css/typography.css';
-@import '~@ionic/angular/css/display.css';
-@import '~@ionic/angular/css/padding.css';
-@import '~@ionic/angular/css/float-elements.css';
-@import '~@ionic/angular/css/text-alignment.css';
-@import '~@ionic/angular/css/text-transformation.css';
-@import '~@ionic/angular/css/flex-utils.css';
+@import "~@ionic/angular/css/core.css";
+@import "~@ionic/angular/css/normalize.css";
+@import "~@ionic/angular/css/structure.css";
+@import "~@ionic/angular/css/typography.css";
+@import "~@ionic/angular/css/display.css";
+@import "~@ionic/angular/css/padding.css";
+@import "~@ionic/angular/css/float-elements.css";
+@import "~@ionic/angular/css/text-alignment.css";
+@import "~@ionic/angular/css/text-transformation.css";
+@import "~@ionic/angular/css/flex-utils.css";
+
+body {
+  padding-top: constant(safe-area-inset-top); /* iOS 11.0 */
+  padding-top: env(safe-area-inset-top); /* iOS 11.2 */
+}
 
 h3 {
-    font-size: 20px;
+  font-size: 20px;
 }
 
 figure {
-    width: 100%;
-    overflow: hidden;
-    margin: 0;
-    max-height: 300px;
+  width: 100%;
+  overflow: hidden;
+  margin: 0;
+  max-height: 300px;
 
-    img {
-        display: block;
-        width: 100%;
-    }
+  img {
+    display: block;
+    width: 100%;
+  }
 }
 
-ion-card-title{
-    font-size: 24px;
+ion-card-title {
+  font-size: 24px;
 }
 .training {
-    ion-note {
-        font-size: 12px !important;
-    }
+  ion-note {
+    font-size: 12px !important;
+  }
 }
